# esp-ppq

./: .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  ProgramEntrance_1.py  ProgramEntrance_2.py  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: lint.yml
.gitlab/ci/: deploy.yml  pre_check.yml  publish.yml  quant_test.yml  rules.yml
.gitlab/tool/: create_version_tag.sh
esp_ppq/: __init__.py
esp_ppq/IR/: README.md  morph.py  processer.py  quantize.py
esp_ppq/api/: __init__.py  espdl_interface.py  interface.py  setting.py
esp_ppq/autoquant/: __init__.py  candidates.py  interface.py  quantize.py  save.py  search.py  setting.py
esp_ppq/core/: README.md  common.py  data.py  ffi.py  quant.py
esp_ppq/executor/: README.md  torch.py
esp_ppq/lib/: README.md  __init__.py  quant.py
esp_ppq/parser/: ascend_export.py  espdl_exporter.py  extension.py  mnn_exporter.py  native.py  ncnn_exporter.py  nxp_exporter.py  util.py  (+5 more)
md_doc/: deploy_for_mnn.md  deploy_trt_by_OnnxParser.md  deploy_trt_by_api.md  how_to_use.md  inference_with_ncnn.md  inference_with_ppl_cuda.md  inference_with_snpe_dsp.md
tests/: __init__.py  testBnToConv.py  testFuseBias.py  test_activation_fusion.py  test_block.py  test_block_split.py  test_convtranspose_decomposition.py  test_cuda_kernel.py  test_gemm_fusion.py  test_gemm_split.py  test_graph_api.py  test_isotone.py  test_layerwise_equalization.py  test_lpnorm_fusion.py  test_onnxruntime.py  test_persus.py  test_rmsnorm_fusion.py  test_rounding.py  test_scalar_tensor_dims.py  test_swish_fusion.py  test_system.py
(+215 files in other folders)
