[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "esp-ppq"
version = "0.1.3"
description = "esp-ppq is an offline quantization tools"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10,<3.12"
dependencies = [
    "cryptography>=45.0.4",
    "flatbuffers>=25.2.10",
    "numpy>=2.0.0",
    "onnx>=1.14.0,<1.18.0",
    "onnxruntime>=1.22.0",
    "onnxsim>=0.4.36",
    "setuptools>=80.9.0",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
cpu = [
  "torch>=2.0.0",
  "torchvision>=0.15.0",
  "torchaudio>=2.0.0",
]
cu124 = [
  "torch>=2.0.0",
  "torchvision>=0.15.0",
  "torchaudio>=2.0.0",
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu124" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu124", extra = "cu124" },
]
torchvision = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu124", extra = "cu124" },
]
torchaudio = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu124", extra = "cu124" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.hatch.build.targets.sdist]
include = ["esp_ppq"]

[tool.hatch.build.targets.wheel]
include = ["esp_ppq"]
